added client next pages

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -14,3 +14,10 @@ spec:
             backend:
               serviceName: auth-srv
               servicePort: 4000
+    - host: ticketing.dev
+      http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-srv
+              servicePort: 3000
