--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -21,12 +21,12 @@ spec:
               cpu: "1"
           env:
             - name: MONGO_SERVER
-              vaue: auth-mongo-srv
+              value: auth-mongo-srv
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
-                  key: jwtkey
-                  name: JWT_KEY
+                  name: jwtkey
+                  key: JWT_KEY
 
 ---
 apiVersion: v1
