publishing npm package

--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ksmuthuus/ms.ticketing.common",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "del ./build/*",
     "build": "tsc",
-    "pub": "git add . && git commit -m \"Updates\" && npm version patch && npm run build && npm publish",
+    "pub": "npm version patch && git add . && git commit -m \"publishing npm package\" &&  npm run build && npm publish",
     "test": "ts-node-dev src/index.ts"
   },
   "keywords": [],
