--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ksmuthuus/ms.ticketing.common",
-  "version": "1.0.6",
+  "name": "@ksmuthuus/common",
+  "version": "1.0.1",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
