--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ksmuthuus/common",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -10,13 +10,20 @@
   "scripts": {
     "clean": "del ./build/*",
     "build": "tsc",
-    "pub": "npm version patch && git add . && git commit -m \"publishing npm package\" &&  npm run build && npm publish --access=public",
+    "pub": "npm version patch && git add . && git commit -m \"publishing npm package\" &&  npm run build && npm publish",
     "test": "ts-node-dev src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@types/cookie-session": "^2.0.39",
+    "@types/express": "^4.17.6",
+    "@types/jsonwebtoken": "^8.5.0",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.5.0"
+  },
   "devDependencies": {
     "del-cli": "^3.0.1",
     "ts-node-dev": "^1.0.0-pre.44",
